# ros-image-to-rtsp

./: CMakeLists.txt  README.md  package.xml
config/: camera1.yaml  camera2.yaml  config.yaml
include/rtsp_image_sender/: projection.hpp
launch/: proj_rtsp_sender.launch  rtsp_sender.launch  rtsp_sender1.launch  rtsp_sender2.launch
params/: intrinsic1.csv  iou_optimized_transform1.txt
roi/: 2025-04-22_17-19-59.pcd
src/: compressedimage_to_rtsp_cpp.cpp  image_to_rtsp_cpp.cpp  proj_image_to_rtsp_cpp.cpp  projection.cpp
